--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SERVER_WRITE_TIMEOUT=600
 SERVER_READ_TIMEOUT=15
-LISTEN="0.0.0.0:8080"
+LISTEN=0.0.0.0:8080
+OSRM_API_HOST=https://router.project-osrm.org
